# MeAndYou

./: Azure_words_That_have_Various_CASINGS.yml  Azure_words_That_have_Various_CASINGS_2.yml  Azure_words_That_have_Various_CASINGS_3.yml  Azure_words_That_have_Various_CASINGS_4.yml  Azure_words_That_have_Various_CASINGS_5.yml  Azure_words_That_have_Various_CASINGS_6.yml  exponential_backoff.py
Flask-Template/: .gitignore  .structureignore.txt  Dockerfile  Makefile  README.md  app.py  create_file_structure.py  file_structure.txt  output.md  pyproject.toml  scan.py
Flask-Template/.github/workflows/: build.yml
Flask-Template/app/: __init__.py  config.py
Flask-Template/app/database/: __init__.py  connections.py
Flask-Template/app/database/models/: __init__.py  user_model.py
Flask-Template/app/middleware/: security.py
Flask-Template/app/routes/: __init__.py  user_routes.py
Flask-Template/tests/: conftest.py  factories.py  test_routes.py
Utils/: .gitignore  LICENSE  README copy.md  example.env.AWS  example.env.github  example.env.github.currentUser  prisma_policies.py  setup.sh
Utils/AWS/: getCredentials.sh
Utils/General/: OS_check.sh  check_UNIX_shell.sh  check_network_access.sh  check_system_resources.sh  detect_windows_shell_environment.sh  findFilePath.sh  vite_openui_template.sh
Utils/GitHub/: create_repo.sh  git_logins.sh  up_branch.py  up_branch.rs  up_branch.sh
Utils/GitHub/up_branch/: Cargo.toml
Utils/GitHub/up_branch/src/: main.rs
