[tool.poetry]
name = "your-flask-app"
version = "0.1.0"
description = ""
authors = ["Matthew McMorries <matthew.mcmorries@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pathspec = "^0.12.1"
flask = {extras = ["async"], version = "^3.0.2"}
flask-cors = "^4.0.0"
python-dotenv = "^1.0.1"
flask-socketio = "^5.3.6"
flask-restx = "^1.3.0"
gunicorn = "^22.0.0"
flask-talisman = "^1.1.0"
redis = "^5.0.3"
mongoengine = "^0.28.2"
flask-mongoengine = "^1.0.0"
pytest-flask = "^1.3.0"
factory-boy = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
black = "^24.4.0"
flake8 = "^7.0.0"
pytest-cov = "^5.0.0"
bandit = "^1.7.8"
safety = "^3.1.0"
backoff = "^2.2.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=your_flask_app --cov-report=term-missing"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
